# llmezi

./: .editorconfig  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
backend/: alembic.ini  main.py  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0adaf67b1f1a_add_credential.py  284c4e0efc66_add_auth_code.py  347c5bd996b6_add_is_active_to_user.py  7754eb39edbc_add_user.py  7a5f1b14f297_add_refresh_tokens.py
backend/app/core/: config.py  database.py
backend/app/graphql/: context.py  schema.py
backend/app/graphql/directives/: __init__.py
backend/app/graphql/resolvers/: auth_resolver.py  generic_resolver.py  smtp_resolver.py  user_resolver.py
backend/app/graphql/types/: auth_type.py  relay.py  smtp_types.py  user_type.py
backend/app/graphql/utils/: __init__.py  auth_utils.py  error_extension.py
backend/app/models/: __init__.py  auth_code.py  credential.py  refresh_token.py  user.py
backend/app/services/: __init__.py  auth_service.py  credential_service.py  email_service.py  exceptions.py  user_service.py
backend/app/utils/: datetime.py  email_templates.py  password_validator.py  rate_limiter.py  security_logger.py  smtp_cache.py
frontend/: eslint.config.js  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/common/: admin-only.tsx  language-switcher.tsx  theme-switcher.tsx
frontend/src/components/layout/: app-layout.tsx  auth-layout.tsx  setting-layout.tsx
frontend/src/hooks/: useAlert.tsx  useAuth.tsx  useFirstAdminCheck.tsx  useIsMobile.tsx  useLocalStorage.tsx  useSmtpCheck.tsx  useWhoAmI.tsx
frontend/src/libs/: apolloClient.ts  authValidator.ts  i18n.ts  theme.ts
frontend/src/locales/en/: translation.json
frontend/src/pages/: forgot-password.tsx  home.tsx  login.tsx  register.tsx
frontend/src/types/: json.d.ts
scripts/: format_code.sh  use_frontend_node.sh
(+6 files in other folders)
