[project]
name = "llmezi-backend"
version = "0.1.0"
description = "A backend service for llmezi application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.12",
]

[dependency-groups]
commit = [
    "pre-commit>=4.2.0",
]
dev = [
    "ruff>=0.11.7",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
